added topicminingConstants class to save the static path